@@ -1,5 +1,7 @@
 package com.back.domain.dashboard.artist.service;
 
+import com.back.domain.dashboard.artist.dto.request.ArtistFundingSearchRequest;
+import com.back.domain.dashboard.artist.dto.request.ArtistProductSearchRequest;
 import com.back.domain.dashboard.artist.dto.response.ArtistFundingResponse;
 import com.back.domain.dashboard.artist.dto.response.ArtistProductResponse;
 import com.back.domain.funding.entity.Funding;
@@ -9,7 +11,6 @@ import com.back.domain.funding.repository.FundingRepository;
 import com.back.domain.product.product.entity.Product;
 import com.back.domain.product.product.entity.SellingStatus;
 import com.back.domain.product.product.repository.ProductRepository;
-import com.back.global.security.jwt.JwtTokenProvider;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -34,6 +35,7 @@ import static org.mockito.Mockito.when;
  * ArtistDashboardServiceImpl 테스트
  * 비즈니스 로직과 데이터 일관성에 집중
  * 2025.09.30 펀딩 실제 DB 연동에 맞춰 테스트 수정
+ * 2025.10.02 JWT 표준 패턴 적용 - Request DTO 사용
  */
 @ExtendWith(MockitoExtension.class)
 @DisplayName("작가 대시보드 서비스 구현체 테스트")
@@ -51,18 +53,12 @@ class ArtistDashboardServiceImplTest {
     @Mock
     private FundingContributionRepository fundingContributionRepository;
 
-    @Mock
-    private JwtTokenProvider jwtTokenProvider;
-
-    private static final String TEST_AUTHORIZATION = "Bearer test-token";
     private static final Long TEST_ARTIST_ID = 5L;
 
     @Test
     @DisplayName("상품 목록 조회 - 실제 DB 연동 테스트")
     void getProducts_ReturnsPaginatedResults() {
         // Given
-        when(jwtTokenProvider.getUserIdFromToken(anyString())).thenReturn(TEST_ARTIST_ID);
-
         Product mockProduct1 = createMockProduct(101L, "상품A", 10000, 10, SellingStatus.SELLING);
         Product mockProduct2 = createMockProduct(102L, "상품B", 20000, 20, SellingStatus.SELLING);
         Product mockProduct3 = createMockProduct(103L, "상품C", 30000, 0, SellingStatus.SOLD_OUT);
@@ -78,9 +74,12 @@ class ArtistDashboardServiceImplTest {
                 eq(TEST_ARTIST_ID), isNull(), isNull(), eq("createDate"), eq("DESC"), any(PageRequest.class)))
                 .thenReturn(mockPage);
 
+        ArtistProductSearchRequest request = new ArtistProductSearchRequest(
+                0, 10, null, null, "createDate", "DESC"
+        );
+
         // When
-        ArtistProductResponse.List result = artistDashboardService.getProducts(
-                TEST_AUTHORIZATION, 0, 10, null, null, "createDate", "DESC");
+        ArtistProductResponse.List result = artistDashboardService.getProducts(TEST_ARTIST_ID, request);
 
         // Then - 페이징 로직과 데이터 일관성 검증
         assertAll(
@@ -91,13 +90,13 @@ class ArtistDashboardServiceImplTest {
                 () -> assertThat(result.isHasNext()).isFalse(),
                 () -> assertThat(result.isHasPrevious()).isFalse(),
                 // 첫 번째 상품 검증
-                () -> assertThat(result.getContent().get(0).productId()).isEqualTo(101L),
-                () -> assertThat(result.getContent().get(0).productName()).isEqualTo("상품A"),
-                () -> assertThat(result.getContent().get(0).price()).isEqualTo(10000),
-                () -> assertThat(result.getContent().get(0).discountRate()).isEqualTo(10),
-                () -> assertThat(result.getContent().get(0).discountPrice()).isEqualTo(9000),
-                () -> assertThat(result.getContent().get(0).sellingStatus()).isEqualTo("SELLING"),
-                () -> assertThat(result.getContent().get(0).statusText()).isEqualTo("판매중")
+                () -> assertThat(result.getContent().getFirst().productId()).isEqualTo(101L),
+                () -> assertThat(result.getContent().getFirst().productName()).isEqualTo("상품A"),
+                () -> assertThat(result.getContent().getFirst().price()).isEqualTo(10000),
+                () -> assertThat(result.getContent().getFirst().discountRate()).isEqualTo(10),
+                () -> assertThat(result.getContent().getFirst().discountPrice()).isEqualTo(9000),
+                () -> assertThat(result.getContent().getFirst().sellingStatus()).isEqualTo("SELLING"),
+                () -> assertThat(result.getContent().getFirst().statusText()).isEqualTo("판매중")
         );
     }
 
@@ -105,8 +104,6 @@ class ArtistDashboardServiceImplTest {
     @DisplayName("상품 목록 조회 - 검색 키워드 필터 적용")
     void getProducts_WithKeywordFilter() {
         // Given
-        when(jwtTokenProvider.getUserIdFromToken(anyString())).thenReturn(TEST_ARTIST_ID);
-
         Product mockProduct = createMockProduct(101L, "감성 포스터", 25000, 10, SellingStatus.SELLING);
 
         Page<Product> mockPage = new PageImpl<>(
@@ -119,14 +116,17 @@ class ArtistDashboardServiceImplTest {
                 eq(TEST_ARTIST_ID), eq("포스터"), isNull(), eq("createDate"), eq("DESC"), any(PageRequest.class)))
                 .thenReturn(mockPage);
 
+        ArtistProductSearchRequest request = new ArtistProductSearchRequest(
+                0, 10, "포스터", null, "createDate", "DESC"
+        );
+
         // When
-        ArtistProductResponse.List result = artistDashboardService.getProducts(
-                TEST_AUTHORIZATION, 0, 10, "포스터", null, "createDate", "DESC");
+        ArtistProductResponse.List result = artistDashboardService.getProducts(TEST_ARTIST_ID, request);
 
         // Then
         assertAll(
                 () -> assertThat(result.getContent()).hasSize(1),
-                () -> assertThat(result.getContent().get(0).productName()).contains("포스터"),
+                () -> assertThat(result.getContent().getFirst().productName()).contains("포스터"),
                 () -> assertThat(result.getTotalElements()).isEqualTo(1)
         );
     }
@@ -135,8 +135,6 @@ class ArtistDashboardServiceImplTest {
     @DisplayName("상품 목록 조회 - 판매중 필터 적용")
     void getProducts_WithSellingFilter() {
         // Given
-        when(jwtTokenProvider.getUserIdFromToken(anyString())).thenReturn(TEST_ARTIST_ID);
-
         Product mockProduct = createMockProduct(101L, "판매중 상품", 10000, 0, SellingStatus.SELLING);
 
         Page<Product> mockPage = new PageImpl<>(
@@ -149,15 +147,18 @@ class ArtistDashboardServiceImplTest {
                 eq(TEST_ARTIST_ID), isNull(), eq(true), eq("createDate"), eq("DESC"), any(PageRequest.class)))
                 .thenReturn(mockPage);
 
+        ArtistProductSearchRequest request = new ArtistProductSearchRequest(
+                0, 10, null, true, "createDate", "DESC"
+        );
+
         // When
-        ArtistProductResponse.List result = artistDashboardService.getProducts(
-                TEST_AUTHORIZATION, 0, 10, null, true, "createDate", "DESC");
+        ArtistProductResponse.List result = artistDashboardService.getProducts(TEST_ARTIST_ID, request);
 
         // Then
         assertAll(
                 () -> assertThat(result.getContent()).hasSize(1),
-                () -> assertThat(result.getContent().get(0).sellingStatus()).isEqualTo("SELLING"),
-                () -> assertThat(result.getContent().get(0).statusText()).isEqualTo("판매중")
+                () -> assertThat(result.getContent().getFirst().sellingStatus()).isEqualTo("SELLING"),
+                () -> assertThat(result.getContent().getFirst().statusText()).isEqualTo("판매중")
         );
     }
 
@@ -165,8 +166,6 @@ class ArtistDashboardServiceImplTest {
     @DisplayName("펀딩 목록 조회 - 상태 필터 적용")
     void getFundings_WithStatusFilter() {
         // Given
-        when(jwtTokenProvider.getUserIdFromToken(anyString())).thenReturn(TEST_ARTIST_ID);
-
         User mockUser = createMockUser(TEST_ARTIST_ID, "작가명");
         Funding mockFunding = createMockFunding(1L, mockUser, "성공한 펀딩", 500000L, FundingStatus.SUCCESS);
 
@@ -183,15 +182,18 @@ class ArtistDashboardServiceImplTest {
 
         when(fundingContributionRepository.sumContributedAmountByFundingId(1L)).thenReturn(500000L);
 
+        ArtistFundingSearchRequest request = new ArtistFundingSearchRequest(
+                0, 10, null, "SUCCESS", null, null, null, null, null, "endDate", "ASC"
+        );
+
         // When
-        ArtistFundingResponse.List result = artistDashboardService.getFundings(
-                TEST_AUTHORIZATION, 0, 10, null, "SUCCESS", null, null, null, null, null, "endDate", "ASC");
+        ArtistFundingResponse.List result = artistDashboardService.getFundings(TEST_ARTIST_ID, request);
 
         // Then
         assertAll(
                 () -> assertThat(result.getContent()).hasSize(1),
-                () -> assertThat(result.getContent().get(0).status()).isEqualTo("SUCCESS"),
-                () -> assertThat(result.getContent().get(0).statusText()).isEqualTo("성공"),
+                () -> assertThat(result.getContent().getFirst().status()).isEqualTo("SUCCESS"),
+                () -> assertThat(result.getContent().getFirst().statusText()).isEqualTo("성공"),
                 () -> assertThat(result.getSummary().successFundings()).isEqualTo(1)
         );
     }
@@ -252,7 +254,7 @@ class ArtistDashboardServiceImplTest {
      */
     private Funding createMockFunding(Long id, User user, String title, long targetAmount, FundingStatus status) {
         LocalDateTime now = LocalDateTime.now();
-        
+
         Funding funding = Funding.builder()
                 .user(user)
                 .title(title)
